# bsmlr

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.adoc
cmake/: compiler_options.cmake  include_addional_cmake.cmake  link_static_lib.cmake  paths.cmake  safe_guards.cmake
include/: new_headerwin.h
scripts/: install_headers_devenv
src/: better_smloader.c  create_hwin.c
submodules/: Makefile
